[package]
name = "local-forwarder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.9.0"
bincode = "2.0.0-rc.3"
color-eyre = "0.6.2"
crossbeam-channel = "0.5.8"
lazy_static = "1.4.0"
rand = "0.8.5"
tokio = { version = "1.29.1", features = ["full"] }
udp-stream = "0.0.9"
