[package]
name = "local-forwarder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.9.0"
color-eyre = "0.6.2"
crossbeam-channel = "0.5.8"
lazy_static = "1.4.0"
rand = "0.8.5"
tokio = { version = "1.30.0", features = ["full"] }
udp-stream = "0.0.9"
udpflow = "0.1.0"
utils = { path = "../utils" }
