[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "2.0.0-rc.3"
color-eyre = "0.6.2"
serde = { version = "1.0.183", features = ["derive"] }
tokio = { version = "1.30.0", features = ["full"], default-features = false }
udp-stream = "0.0.9"
udpflow = "0.1.0"
